minor design fix to spacings on homescreen

--- a/apps/homescreen/everything.me/css/everything.me.css
+++ b/apps/homescreen/everything.me/css/everything.me.css
@@ -28,5 +28,5 @@
 }
 .apps > div.evmePage {
     -moz-box-sizing: border-box;
-    padding-top: calc(25% + 1.2rem);
+    padding-top: calc(25% + 1.3rem);
 }
